// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PickitemMultiselect /> basic example 1`] = `
<div
  className="xui-pickitem--body"
  role="button"
  tabIndex={0}
>
  <div
    className="xui-pickitem-multiselect--checkbox xui-styledcheckboxradiowrapper xui-styledcheckboxradio-small"
  >
    <label
      className="xui-styledcheckboxradio"
      onClick={[Function]}
    >
      <input
        aria-labelledby="xui-testPickitemCheckboxId"
        className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-small xui-pickitem--input"
        defaultChecked={false}
        disabled={false}
        onChange={[Function]}
        required={false}
        tabIndex={-1}
        type="checkbox"
      />
      <div
        className="xui-styledcheckboxradio--checkbox xui-pickitem--input xui-styledcheckboxradio--checkbox-small"
        onAnimationEnd={[Function]}
      >
        <div
          className="xui-touchtarget"
        />
      </div>
      <span
        className="xui-styledcheckboxradio--label xui-styledcheckboxradio--label-small xui-pickitem--text xui-pickitem-multiselect--label"
        id="xui-testPickitemCheckboxId"
      >
        <span
          className=""
        >
          Item
        </span>
      </span>
    </label>
  </div>
</div>
`;

exports[`<PickitemMultiselect /> is selected, adds truncation and custom classes 1`] = `
<div
  className="xui-pickitem--body"
  role="button"
  tabIndex={0}
>
  <div
    className="custom-checkbox xui-pickitem-text-truncated xui-pickitem-multiselect--checkbox xui-styledcheckboxradiowrapper xui-styledcheckboxradio-small"
  >
    <label
      className="xui-styledcheckboxradio"
      onClick={[Function]}
    >
      <input
        aria-labelledby="xui-testPickitemCheckboxId"
        checked={true}
        className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-small xui-pickitem--input"
        disabled={false}
        onChange={[Function]}
        required={false}
        tabIndex={-1}
        type="checkbox"
      />
      <div
        className="xui-styledcheckboxradio--checkbox xui-pickitem--input xui-styledcheckboxradio--checkbox-small"
        onAnimationEnd={[Function]}
      >
        <div
          className="xui-touchtarget"
        />
      </div>
      <span
        className="xui-styledcheckboxradio--label xui-styledcheckboxradio--label-small xui-pickitem--text xui-pickitem-multiselect--label xui-pickitem-text-truncated"
        id="xui-testPickitemCheckboxId"
      >
        <span
          className="xui-pickitem-text-truncated"
        >
          <span
            className="xui-pickitem-text-truncated"
          >
            Item
          </span>
        </span>
      </span>
    </label>
  </div>
</div>
`;
